--- a/submission-lab2/myproject/main/templates/index-2.html
+++ b/submission-lab2/myproject/main/templates/index-2.html
@@ -7,35 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Appku - Software Landing Page">
-
+    {% load static %}
     <!-- ========== Page Title ========== -->
     <title>Appku - Software Landing Page</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/elegant-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/validnavs.css" rel="stylesheet" />
-    <link href="assets/css/helper.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/elegant-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/flaticon-set.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/magnific-popup.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/validnavs.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/helper.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/responsive.css' %}" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5/html5shiv.min.js"></script>
-      <script src="assets/js/html5/respond.min.js"></script>
+      <script src="{% static 'assets/js/html5/html5shiv.min.js' %}"></script>
+      <script src="{% static 'assets/js/html5/respond.min.js' %}"></script>
     <![endif]-->
 
 </head>
@@ -61,7 +61,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -69,7 +69,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
 
-                    <img src="assets/img/logo.png" alt="Logo">
+                    <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-times"></i>
                     </button>
@@ -205,8 +205,8 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="thumb-inner">
-                            <img class="wow fadeInRight" data-wow-delay="900ms" src="assets/img/thumb-new/1.png" alt="Thumb">
-                            <img class="wow fadeInLeft" data-wow-delay="1100ms" src="assets/img/thumb-new/2.png" alt="Thumb">
+                            <img class="wow fadeInRight" data-wow-delay="900ms" src="{% static 'assets/img/thumb-new/1.png' %}" alt="Thumb">
+                            <img class="wow fadeInLeft" data-wow-delay="1100ms" src="{% static 'assets/img/thumb-new/2.png' %}" alt="Thumb">
                             <div class="shape-circle wow fadeInLeft" data-wow-delay="1500ms"></div>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             <div class="item">
                                 <div class="icon">
                                     <i class="fas fa-angle-right"></i>
-                                    <img src="assets/img/icon/software/6.png" alt="Icon">
+                                    <img src="{% static 'assets/img/icon/software/6.png' %}" alt="Icon">
                                 </div>
                                 <div class="content">
                                     <h4>Ticket Manage</h4>
@@ -252,7 +252,7 @@
                             <div class="item">
                                 <div class="icon">
                                     <i class="fas fa-angle-right"></i>
-                                    <img src="assets/img/icon/software/2.png" alt="Icon">
+                                    <img src="{% static 'assets/img/icon/software/2.png' %}" alt="Icon">
                                 </div>
                                 <div class="content">
                                     <h4>Live Messaging</h4>
@@ -266,7 +266,7 @@
                             <div class="item">
                                 <div class="icon">
                                     <i class="fas fa-angle-right"></i>
-                                    <img src="assets/img/icon/software/5.png" alt="Icon">
+                                    <img src="{% static 'assets/img/icon/software/5.png' %}" alt="Icon">
                                 </div>
                                 <div class="content">
                                     <h4>Email Workflow</h4>
@@ -345,8 +345,8 @@
                     <div class="about-style-three">
                         <div class="shape" style="background-image: url(assets/img/shape/border-line.svg);"></div>
                         <div class="thumb">
-                            <img src="assets/img/800x900.png" alt="Thumb">
-                            <img src="assets/img/dashboard-2/5.png" alt="Thumb">
+                            <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
+                            <img src="{% static 'assets/img/dashboard-2/5.png' %}" alt="Thumb">
                         </div>
                         <div class="get-app">
                             <h5>Get trial</h5>
@@ -354,10 +354,10 @@
                             <span>Be part of our besiness platform</span>
                             <div class="app-user">
                                 <div class="content">
-                                    <img src="assets/img/100x100.png" alt="Thumb">
-                                    <img src="assets/img/100x100.png" alt="Thumb">
-                                    <img src="assets/img/100x100.png" alt="Thumb">
-                                    <img src="assets/img/100x100.png" alt="Thumb">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Thumb">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Thumb">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Thumb">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Thumb">
                                     <a href="#"><i class="fas fa-plus"></i></a>
                                 </div>
                                 <a class="btn circle btn-theme-effect btn-sm" href="#">Click for trial</a>
@@ -423,8 +423,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/22.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/22.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/22.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/22.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -436,8 +436,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/33.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/33.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/33.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/33.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -449,8 +449,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/11.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/11.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/11.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/11.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -560,7 +560,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-6 thumb">
-                    <img src="assets/img/illustration/7.png" alt="Thumb">
+                    <img src="{% static 'assets/img/illustration/7.png' %}" alt="Thumb">
                 </div>
                 <div class="col-lg-6 info ml-auto">
                     <h2>Most probably you are getting the best App ever</h2>
@@ -631,7 +631,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle" class="share-toggle" hidden>
                                     <label for="toggle" class="share-button">
@@ -659,7 +659,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle2" class="share-toggle" hidden>
                                     <label for="toggle2" class="share-button">
@@ -687,7 +687,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle3" class="share-toggle" hidden>
                                     <label for="toggle3" class="share-button">
@@ -828,7 +828,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Devid Warner</h4>
                                         <span> Managing Director</span>
@@ -854,7 +854,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Pruasuj Natasha</h4>
                                         <span> Theme Developer</span>
@@ -880,7 +880,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Koyel Anderson</h4>
                                         <span> Project Manager</span>
@@ -934,7 +934,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>18</strong> <span>Apr</span></div>
                         </div>
                         <div class="info">
@@ -963,7 +963,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>25</strong> <span>Aug</span></div>
                         </div>
                         <div class="info">
@@ -992,7 +992,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>05</strong> <span>Jul</span></div>
                         </div>
                         <div class="info">
@@ -1038,7 +1038,7 @@
                     </div>
                 </div>
                 <div class="illustration">
-                    <img src="assets/img/illustration/1.png" alt="illustration">
+                    <img src="{% static 'assets/img/illustration/1.png' %}" alt="illustration">
                 </div>
            </div>
         </div>
@@ -1053,7 +1053,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
                             <p>
                                 Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy for you are out. Fertile how old address did showing.
                             </p>
@@ -1181,22 +1181,22 @@
     
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/validnavs.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.appear.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
+    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'assets/js/wow.min.js' %}"></script>
+    <script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
+    <script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/count-to.js' %}"></script>
+    <script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
+    <script src="{% static 'assets/js/validnavs.js' %}"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
 </html>
