--- a/submission-lab2/myproject/main/templates/index-op-3.html
+++ b/submission-lab2/myproject/main/templates/index-op-3.html
@@ -7,35 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Appku - Software Landing Page">
-
+    {% load static %}
     <!-- ========== Page Title ========== -->
     <title>Appku - Software Landing Page</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/elegant-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/validnavs.css" rel="stylesheet" />
-    <link href="assets/css/helper.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/elegant-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/flaticon-set.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/magnific-popup.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/validnavs.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/helper.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/responsive.css' %}" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5/html5shiv.min.js"></script>
-      <script src="assets/js/html5/respond.min.js"></script>
+      <script src="{% static 'assets/js/html5/html5shiv.min.js' %}"></script>
+      <script src="{% static 'assets/js/html5/respond.min.js' %}"></script>
     <![endif]-->
 
 </head>
@@ -61,8 +61,8 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index-2.html">
-                        <img src="assets/img/logo-light.png" class="logo logo-display" alt="Logo">
-                        <img src="assets/img/logo.png" class="logo logo-scrolled" alt="Logo">
+                        <img src="{% static 'assets/img/logo-light.png' %}" class="logo logo-display" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" class="logo logo-scrolled" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -72,7 +72,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
 
-                        <img src="assets/img/logo.png" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-times"></i>
                         </button>
@@ -152,7 +152,7 @@
                     </div>
 
                      <div class="col-lg-6 thumb wow fadeInRight" data-wow-delay="900ms">
-                        <img src="assets/img/dashboard/18.png" alt="Thumb">
+                        <img src="{% static 'assets/img/dashboard/18.png' %}" alt="Thumb">
                     </div>
                     
                 </div>
@@ -170,11 +170,11 @@
                     <div class="col-lg-12">
                         <h3>Over <strong>150,000+</strong> client all over the world</h3>
                         <div class="partner-carousel owl-carousel owl-theme">
-                            <img src="assets/img/logo/1.png" alt="Partner">
-                            <img src="assets/img/logo/2.png" alt="Partner">
-                            <img src="assets/img/logo/3.png" alt="Partner">
-                            <img src="assets/img/logo/4.png" alt="Partner">
-                            <img src="assets/img/logo/5.png" alt="Partner">
+                            <img src="{% static 'assets/img/logo/1.png' %}" alt="Partner">
+                            <img src="{% static 'assets/img/logo/2.png' %}" alt="Partner">
+                            <img src="{% static 'assets/img/logo/3.png' %}" alt="Partner">
+                            <img src="{% static 'assets/img/logo/4.png' %}" alt="Partner">
+                            <img src="{% static 'assets/img/logo/5.png' %}" alt="Partner">
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
     <div id="about" class="about-area bg-gray default-padding">
         <!-- Shape -->
         <div class="fixed-shape-left">
-            <img src="assets/img/shape/9.png" alt="Shape">
+            <img src="{% static 'assets/img/shape/9.png' %}" alt="Shape">
         </div>
         <!-- End Shape -->
         <div class="container">
@@ -196,8 +196,8 @@
                 <div class="row align-center">
                     <div class="col-lg-6">
                         <div class="thumb">
-                            <img class="wow fadeInLeft" data-wow-delay="300ms" src="assets/img/dashboard/16.png" alt="Thumb">
-                            <img class="wow fadeInUp" data-wow-delay="500ms" src="assets/img/dashboard/11.png" alt="Thumb">
+                            <img class="wow fadeInLeft" data-wow-delay="300ms" src="{% static 'assets/img/dashboard/16.png' %}" alt="Thumb">
+                            <img class="wow fadeInUp" data-wow-delay="500ms" src="{% static 'assets/img/dashboard/11.png' %}" alt="Thumb">
                         </div>
                     </div>
                     <div class="col-lg-6 info wow fadeInRight">
@@ -237,7 +237,7 @@
                 <i class="flaticon-email"></i>
                 <!-- Shape -->
                 <div class="fixed-shape-bottom">
-                    <img src="assets/img/shape/14.png" alt="Shape">
+                    <img src="{% static 'assets/img/shape/14.png' %}" alt="Shape">
                 </div>
                 <!-- End Shape -->
                 <div class="row align-center">
@@ -362,7 +362,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-6 thumb">
-                    <img src="assets/img/illustration/2.png" alt="dashboard">
+                    <img src="{% static 'assets/img/illustration/2.png' %}" alt="dashboard">
                 </div>
                 
                 <div class="col-lg-6 info">
@@ -457,8 +457,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/22.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/22.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/22.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/22.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -470,8 +470,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/33.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/33.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/33.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/33.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -483,8 +483,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/dashboard/11.jpg" alt="Thumb">
-                                <a href="assets/img/dashboard/11.jpg" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/dashboard/11.jpg' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/dashboard/11.jpg' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -526,7 +526,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle" class="share-toggle" hidden>
                                     <label for="toggle" class="share-button">
@@ -554,7 +554,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle2" class="share-toggle" hidden>
                                     <label for="toggle2" class="share-button">
@@ -582,7 +582,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle3" class="share-toggle" hidden>
                                     <label for="toggle3" class="share-button">
@@ -730,7 +730,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Devid Warner</h4>
                                         <span> Managing Director</span>
@@ -756,7 +756,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Pruasuj Natasha</h4>
                                         <span> Theme Developer</span>
@@ -782,7 +782,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Koyel Anderson</h4>
                                         <span> Project Manager</span>
@@ -836,7 +836,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>18</strong> <span>Apr</span></div>
                         </div>
                         <div class="info">
@@ -865,7 +865,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>25</strong> <span>Aug</span></div>
                         </div>
                         <div class="info">
@@ -894,7 +894,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>05</strong> <span>Jul</span></div>
                         </div>
                         <div class="info">
@@ -932,7 +932,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
                             <p>
                                 Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy for you are out. Fertile how old address did showing.
                             </p>
@@ -1060,22 +1060,22 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/validnavs.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.appear.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
+    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'assets/js/wow.min.js' %}"></script>
+    <script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
+    <script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/count-to.js' %}"></script>
+    <script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
+    <script src="{% static 'assets/js/validnavs.js' %}"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
 </html>
