--- a/submission-lab2/myproject/main/templates/index-op-4.html
+++ b/submission-lab2/myproject/main/templates/index-op-4.html
@@ -7,35 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Appku - Software Landing Page">
-
+    {% load static %}
     <!-- ========== Page Title ========== -->
     <title>Appku - Software Landing Page</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/elegant-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/validnavs.css" rel="stylesheet" />
-    <link href="assets/css/helper.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/elegant-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/flaticon-set.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/magnific-popup.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/validnavs.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/helper.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/responsive.css' %}" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5/html5shiv.min.js"></script>
-      <script src="assets/js/html5/respond.min.js"></script>
+      <script src="{% static 'assets/js/html5/html5shiv.min.js' %}"></script>
+      <script src="{% static 'assets/js/html5/respond.min.js' %}"></script>
     <![endif]-->
 
 </head>
@@ -61,7 +61,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -71,7 +71,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
 
-                        <img src="assets/img/logo.png" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-times"></i>
                         </button>
@@ -155,7 +155,7 @@
                     </div>
 
                      <div class="col-lg-6 thumb wow fadeInRight" data-wow-delay="900ms">
-                        <img src="assets/img/illustration/14.png" alt="Thumb">
+                        <img src="{% static 'assets/img/illustration/14.png' %}" alt="Thumb">
                     </div>
                     
                 </div>
@@ -175,7 +175,7 @@
                         <div class="feature-style-four">
                             <h4><a href="#">BI Implementation</a></h4>
                             <div class="icon">
-                                <img src="assets/img/icon/analytics/1.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/1.png' %}" alt="Icon">
                             </div>
                             <p>
                                 Passage weather as up am exposed. And natural related man subject has. Eagerness get situation his was .
@@ -188,7 +188,7 @@
                         <div class="feature-style-four">
                             <h4><a href="#">Analysis competitors</a></h4>
                             <div class="icon">
-                                <img src="assets/img/icon/analytics/4.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/4.png' %}" alt="Icon">
                             </div>
                             <p>
                                 Passage weather as up am exposed. And natural related man subject has. Eagerness get situation his was .
@@ -201,7 +201,7 @@
                         <div class="feature-style-four">
                             <h4><a href="#">Analysis big Data</a></h4>
                             <div class="icon">
-                                <img src="assets/img/icon/analytics/3.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/3.png' %}" alt="Icon">
                             </div>
                             <p>
                                 Passage weather as up am exposed. And natural related man subject has. Eagerness get situation his was .
@@ -214,7 +214,7 @@
                         <div class="feature-style-four">
                             <h4><a href="#">Traget your audience</a></h4>
                             <div class="icon">
-                                <img src="assets/img/icon/analytics/2.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/2.png' %}" alt="Icon">
                             </div>
                             <p>
                                 Passage weather as up am exposed. And natural related man subject has. Eagerness get situation his was.
@@ -236,7 +236,7 @@
                 <!-- Single Item -->
                 <div class="single-item col-lg-6">
                     <div class="about-style-four wow fadeInUp">
-                        <img src="assets/img/illustration/10.png" alt="illustration">
+                        <img src="{% static 'assets/img/illustration/10.png' %}" alt="illustration">
                     </div>
                 </div>
                 <!-- End Single Item -->
@@ -310,7 +310,7 @@
 
                         <div class="services-style-four wow fadeInUp">
                             <div class="thumb">
-                                <img src="assets/img/icon/analytics/cloud-server.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/cloud-server.png' %}" alt="Icon">
                             </div>
                             <div class="info">
                                 <h4><a href="#">Predictive analytics</a></h4>
@@ -322,7 +322,7 @@
 
                         <div class="services-style-four wow fadeInUp" data-wow-delay="300ms">
                             <div class="thumb">
-                                <img src="assets/img/icon/analytics/v2.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/v2.png' %}" alt="Icon">
                             </div>
                             <div class="info">
                                 <h4><a href="#">Data science & AI</a></h4>
@@ -340,7 +340,7 @@
 
                         <div class="services-style-four wow fadeInUp" data-wow-delay="500ms">
                             <div class="thumb">
-                                <img src="assets/img/icon/analytics/v3.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/v3.png' %}" alt="Icon">
                             </div>
                             <div class="info">
                                 <h4><a href="#">Big data visualisation</a></h4>
@@ -352,7 +352,7 @@
 
                         <div class="services-style-four wow fadeInUp" data-wow-delay="700ms">
                             <div class="thumb">
-                                <img src="assets/img/icon/analytics/v4.png" alt="Icon">
+                                <img src="{% static 'assets/img/icon/analytics/v4.png' %}" alt="Icon">
                             </div>
                             <div class="info">
                                 <h4><a href="#">Data security</a></h4>
@@ -379,7 +379,7 @@
                 <div class="col-lg-6">
                     <div class="process-style-four">
                         <div class="thumb">
-                            <img class="wow fadeInUp" src="assets/img/illustration/5.png" alt="illustration">
+                            <img class="wow fadeInUp" src="{% static 'assets/img/illustration/5.png' %}" alt="illustration">
                         </div>
                     </div>
                 </div>
@@ -463,7 +463,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="team-style-two">
                             <div class="thumb">
-                                <img src="assets/img/800x800.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x800.png' %}" alt="Thumb">
                                 <div class="shape" style="background-image: url(assets/img/shape/32.png);"></div>
                             </div>
                             <div class="info">
@@ -477,7 +477,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="team-style-two">
                             <div class="thumb">
-                                <img src="assets/img/800x800.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x800.png' %}" alt="Thumb">
                                 <div class="shape" style="background-image: url(assets/img/shape/32.png);"></div>
                             </div>
                             <div class="info">
@@ -491,7 +491,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="team-style-two">
                             <div class="thumb">
-                                <img src="assets/img/800x800.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x800.png' %}" alt="Thumb">
                                 <div class="shape" style="background-image: url(assets/img/shape/32.png);"></div>
                             </div>
                             <div class="info">
@@ -505,7 +505,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="team-style-two">
                             <div class="thumb">
-                                <img src="assets/img/800x800.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x800.png' %}" alt="Thumb">
                                 <div class="shape" style="background-image: url(assets/img/shape/32.png);"></div>
                             </div>
                             <div class="info">
@@ -639,7 +639,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Devid Warner</h4>
                                         <span> Managing Director</span>
@@ -665,7 +665,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Pruasuj Natasha</h4>
                                         <span> Theme Developer</span>
@@ -691,7 +691,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Koyel Anderson</h4>
                                         <span> Project Manager</span>
@@ -745,7 +745,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>18</strong> <span>Apr</span></div>
                         </div>
                         <div class="info">
@@ -774,7 +774,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>25</strong> <span>Aug</span></div>
                         </div>
                         <div class="info">
@@ -803,7 +803,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>05</strong> <span>Jul</span></div>
                         </div>
                         <div class="info">
@@ -841,7 +841,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
                             <p>
                                 Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy for you are out. Fertile how old address did showing.
                             </p>
@@ -969,22 +969,22 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/validnavs.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.appear.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
+    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'assets/js/wow.min.js' %}"></script>
+    <script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
+    <script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/count-to.js' %}"></script>
+    <script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
+    <script src="{% static 'assets/js/validnavs.js' %}"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
 </html>
