--- a/submission-lab2/myproject/main/templates/index.html
+++ b/submission-lab2/myproject/main/templates/index.html
@@ -7,35 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Appku - Software Landing Page">
-
+    {% load static %}
     <!-- ========== Page Title ========== -->
     <title>Appku - Software Landing Page</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/elegant-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/validnavs.css" rel="stylesheet" />
-    <link href="assets/css/helper.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/font-awesome.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/elegant-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/flaticon-set.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/magnific-popup.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.carousel.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/owl.theme.default.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/validnavs.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/helper.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="{% static 'assets/css/responsive.css' %}" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5/html5shiv.min.js"></script>
-      <script src="assets/js/html5/respond.min.js"></script>
+      <script src="{% static 'assets/js/html5/html5shiv.min.js' %}"></script>
+      <script src="{% static 'assets/js/html5/respond.min.js' %}"></script>
     <![endif]-->
 
 </head>
@@ -61,7 +61,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="{% static 'assets/img/logo.png' %}" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -69,7 +69,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
 
-                    <img src="assets/img/logo.png" alt="Logo">
+                    <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-times"></i>
                     </button>
@@ -203,7 +203,7 @@
                     </div>
 
                      <div class="col-lg-6 thumb wow fadeInRight" data-wow-delay="900ms">
-                        <img src="assets/img/illustration/15.png" alt="Thumb">
+                        <img src="{% static 'assets/img/illustration/15.png' %}" alt="Thumb">
                     </div>
                     
                 </div>
@@ -234,7 +234,7 @@
                 <div class="features-style-four col-lg-4 col-md-6">
                     <div class="feature-style-four-item">
                         <div class="icon">
-                            <img src="assets/img/icon/app/1.png" alt="Icon">
+                            <img src="{% static 'assets/img/icon/app/1.png' %}" alt="Icon">
                         </div>
                         <div class="info">
                             <h4>Fully Secured</h4>
@@ -249,7 +249,7 @@
                 <div class="features-style-four col-lg-4 col-md-6">
                     <div class="feature-style-four-item">
                         <div class="icon">
-                            <img src="assets/img/icon/app/2.png" alt="Icon">
+                            <img src="{% static 'assets/img/icon/app/2.png' %}" alt="Icon">
                         </div>
                         <div class="info">
                             <h4>Easy to Edit</h4>
@@ -264,7 +264,7 @@
                 <div class="features-style-four col-lg-4 col-md-6">
                     <div class="feature-style-four-item">
                         <div class="icon">
-                            <img src="assets/img/icon/app/3.png" alt="Icon">
+                            <img src="{% static 'assets/img/icon/app/3.png' %}" alt="Icon">
                         </div>
                         <div class="info">
                             <h4>Design & Branding</h4>
@@ -347,7 +347,7 @@
                 <div class="col-lg-6 text-center app-feature-style-one">
                     <div class="app-feature-item">
                         <div class="app-feature-thumb">
-                            <img src="assets/img/illustration/17.png" alt="Thumb">
+                            <img src="{% static 'assets/img/illustration/17.png' %}" alt="Thumb">
                         </div>
                     </div>
                 </div>
@@ -399,8 +399,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/screenshot/1.png" alt="Thumb">
-                                <a href="assets/img/screenshot/1.png" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/screenshot/1.png' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/screenshot/1.png' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -409,8 +409,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/screenshot/2.png" alt="Thumb">
-                                <a href="assets/img/screenshot/2.png" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/screenshot/2.png' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/screenshot/2.png' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -419,8 +419,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/screenshot/3.png" alt="Thumb">
-                                <a href="assets/img/screenshot/3.png" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/screenshot/3.png' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/screenshot/3.png' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -429,8 +429,8 @@
                         <!-- Single item -->
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/screenshot/4.png" alt="Thumb">
-                                <a href="assets/img/screenshot/4.png" class="item popup-gallery theme video-play-button">
+                                <img src="{% static 'assets/img/screenshot/4.png' %}" alt="Thumb">
+                                <a href="{% static 'assets/img/screenshot/4.png' %}" class="item popup-gallery theme video-play-button">
                                     <i class="fa fa-plus"></i>
                                 </a>
                             </div>
@@ -466,7 +466,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle" class="share-toggle" hidden>
                                     <label for="toggle" class="share-button">
@@ -494,7 +494,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle2" class="share-toggle" hidden>
                                     <label for="toggle2" class="share-button">
@@ -522,7 +522,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x900.png" alt="Thumb">
+                                <img src="{% static 'assets/img/800x900.png' %}" alt="Thumb">
                                 <div class="social">
                                     <input type="checkbox" id="toggle3" class="share-toggle" hidden>
                                     <label for="toggle3" class="share-button">
@@ -576,7 +576,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Devid Warner</h4>
                                         <span> Managing Director</span>
@@ -602,7 +602,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Pruasuj Natasha</h4>
                                         <span> Theme Developer</span>
@@ -628,7 +628,7 @@
                             <!-- Single Item -->
                             <div class="item">
                                 <div class="provider">
-                                    <img src="assets/img/100x100.png" alt="Author">
+                                    <img src="{% static 'assets/img/100x100.png' %}" alt="Author">
                                     <div class="content">
                                         <h4>Koyel Anderson</h4>
                                         <span> Project Manager</span>
@@ -769,7 +769,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>18</strong> <span>Apr</span></div>
                         </div>
                         <div class="info">
@@ -798,7 +798,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>25</strong> <span>Aug</span></div>
                         </div>
                         <div class="info">
@@ -827,7 +827,7 @@
                 <div class="single-item col-lg-4 col-md-6">
                     <div class="item">
                         <div class="thumb">
-                            <a href="blog-single-with-sidebar.html"><img src="assets/img/800x600.png" alt="Thumb"></a>
+                            <a href="blog-single-with-sidebar.html"><img src="{% static 'assets/img/800x600.png' %}" alt="Thumb"></a>
                             <div class="date"><strong>05</strong> <span>Jul</span></div>
                         </div>
                         <div class="info">
@@ -874,7 +874,7 @@
                 </div>
             </div>
             <div class="illustration">
-                <img src="assets/img/illustration/1.png" alt="illustration">
+                <img src="{% static 'assets/img/illustration/1.png' %}" alt="illustration">
             </div>
         </div>
     </div>
@@ -888,7 +888,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
                             <p>
                                 Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy for you are out. Fertile how old address did showing.
                             </p>
@@ -1016,22 +1016,22 @@
     
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/validnavs.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.appear.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
+    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'assets/js/wow.min.js' %}"></script>
+    <script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
+    <script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'assets/js/count-to.js' %}"></script>
+    <script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
+    <script src="{% static 'assets/js/validnavs.js' %}"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
 </html>
